# AIOpsOS

./: .dockerignore  .gitignore  AIOpsOS.md  AIOpsOS总体架构与实施规划.txt  CHANGELOG.md  CLAUDE.md  README.md  个性化私人助理与精细化权限控制.txt  企业级平台设置.txt  前端技术选型与架构设计.txt  前端选型及架构规范.txt  告警中心设计.txt  客户端与服务端功能.txt  客户端模型生命周期管理.txt  客户端规划.txt  对话安全确认与信息收集机制：智能人机协作面板.txt  对话界面交互增强：意图识别、规划与引用全过程透明化.txt  极简对话界面整合.txt  知识库前端设计.txt  知识库结构设计.txt  管控分离架构.txt  部署.txt  项目开发文档.txt  项目目录规划.txt
server/: .gitignore  .poetry-hash  alembic.ini  main_consumer.py  pyproject.toml  run_server.py  test_db_connection.py  text_济南今天天气_2025年_20260426_094059.json  text_济南天气预报_今天_气温_20260426_101651.json  uvicorn.err
server/conversation_history/: session_4ea555c0.md  session_f3f2d41e.md
server/data/: query_alerts_script.py
server/data/knowledge/: index.md  log.md
server/data/output/: jinan-weather-report-2026-05-10.html
server/data/reports/: jinan-weather-report-2026-05-04.html  jinan_weather_report.html  六脉智能运维平台创新申报分析报告.html
server/home/: project_analysis_report.html
server/home/user/: generate_image.py  report.html
server/migrations/: env.py
server/migrations/versions/: 001_initial_schema.py  002_knowledge_memory.py  003_memory_scope.py  004_session_sleep_memory.py  005_tool_category_source.py  006_schedule_next_run.py  007_event_id_string.py  008_tool_search_idx.py  009_model_providers.py  00e292349692_add_datasource_table_mapping.py  010_agent_user_prompt.py  011_session_review_flags.py  012_spaces.py  0d5bb1cbc6a7_add_report_type_and_date_range_to_.py  15cddc4a3f2a_add_model_type_to_model_providers.py  202605041750_add_feedbacks_table.py  202605041800_add_trajectory_and_evolution_tables.py  202605041810_extend_memories_and_sessions.py  202605041820_add_wiki_compile_log.py  202605041830_add_tool_safety_column.py  202605041840_drop_memory_legacy_sync_flag.py  202605091000_add_images_to_feedbacks.py  202605101000_scenario_ops_emergency_collab.py  202605101100_add_message_sync_failures.py  202605101200_add_progress_analysis_records.py  202605111000_add_content_hash_to_knowledge_documents.py  202605121000_add_missing_columns.py  3976477caf48_add_model_provider_id_to_sessions.py  3f7d4a87e74a_add_cron_timeout_retries.py  483a5a6b15c6_workflow_fields.py  48a569adf4e6_add_user_profile_and_invitations.py  5c38a4fcb917_merge_workflow_linkage_and_session_.py  5eb219b0b7f0_add_notifications_table_and_delivery_.py  5fbfaf863285_add_workflow_contexts.py  61432a83b688_add_space_id_to_agents.py  6325af2d08a1_add_folder_path_to_session_files.py  67c348e05ff2_performance_indexes.py  716efe2f0c86_add_is_builtin_to_agents_and_tools.py  7268beefe5b5_add_confidence_to_tasks.py  8481abf828c9_is_public_to_visibility.py  (+8 more)
server/root/: report_script_version_governance.html
server/scripts/: audit_schema_coverage.py  backfill_memory_hash_and_embedding.py  cleanup_chat_msgs_keys.py  eval_annotate.py  eval_cold_start.py  eval_run.py  evo_ctl.py  force_update_flags.py  import_hermes_skills.py  recover_reports.py  rollout_router_llm.py  seed.py  seed_skills.py  wiki_precompute_summaries.py
server/shared/: innovation_report.html
server/src/: config.py  main.py  main_control.py  main_execution.py
server/src/agent/: __init__.py  context.py  deep_agent.py  graph.py  human_interrupt.py  state.py
server/src/api/: deps.py  public.py
server/src/consumers/: __init__.py  alert_consumer.py  dedup.py  normalizer.py
server/src/core/: instance.py  logging.py  metrics.py  model_factory.py  rate_limiter.py  redis.py  security.py  tracing.py
server/src/models/: __init__.py  agent.py  alert.py  assistant.py  base.py  channel.py  cmdb.py  collaboration.py  cron_job.py  datasource.py  (+20 more)
server/tests/: conftest.py  test_api_auth.py  test_graph.py  test_security.py  test_tool_manager.py
server/tmp/: get_hostname.py
server/uploads/: 中国稀土_近一周走势分析报告.html
server/workspace/: weifang_weather_report.html
(+1159 files in other folders)
