[tool.poetry]
name = "aiopsos"
version = "0.1.0"
description = "AIOpsOS - AI运维智能操作系统"
authors = []
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.110"}
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.9"
celery = {extras = ["redis"], version = "^5.3"}
redis = "^5.0"
kafka-python = "^2.0"
pgvector = "^0.3"
langgraph = ">=1.1"
langgraph-prebuilt = ">=1.0"
langchain = ">=1.0"
langchain-openai = ">=1.2"
email-validator = "^2.3.0"
jieba = "^0.42.1"
pypdf = "^6.10.2"
markitdown = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.3"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
