[tool.poetry]
name = "aiopsos"
version = "0.1.0"
description = "AIOpsOS - AI运维智能操作系统"
authors = []
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.110"}
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.9"
celery = {extras = ["redis"], version = "^5.3"}
redis = "^5.0"
kafka-python = "^2.0"
pgvector = "^0.3"
langgraph = ">=1.1"
langgraph-prebuilt = ">=1.0"
langchain = ">=1.0"
langchain-openai = ">=1.2"
langchain-anthropic = ">=0.3.0"
email-validator = "^2.3.0"
jieba = "^0.42.1"
pypdf = "^6.10.2"
markitdown = "^0.1.5"
aiohttp = "^3.13"
croniter = "^6.2.2"
deepagents = "0.5.3"
ldap3 = "^2.9.1"
weasyprint = "^68.1"
# --- Observability (spec: agent-runtime-optimization-evolution, task 2.1) ---
opentelemetry-api = "^1.41"
opentelemetry-sdk = "^1.41"
opentelemetry-instrumentation-fastapi = "^0.62b1"
opentelemetry-instrumentation-sqlalchemy = "^0.62b1"
opentelemetry-exporter-otlp = "^1.41"
prometheus-client = "^0.21"
# --- Kafka admin + schema (task 4.1, 4.6) ---
aiokafka = "^0.12"
jsonschema = "^4.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.28"
ruff = "^0.3"
psycopg2-binary = "^2.9"
hypothesis = "^6.100"
pytest-benchmark = "^4.0"
fakeredis = "^2.20"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Custom markers used by the spec test suite. Register them here to
# avoid PytestUnknownMarkWarning noise during CI runs.
markers = [
    "db: tests that require a reachable PostgreSQL instance",
    "property: property-based tests (hypothesis); skipped under -m 'not property'",
    "benchmark: performance benchmarks; gated by RUN_BENCH=1",
    "live_llm: tests that call a real LLM provider; gated by RUN_LIVE_LLM=1",
    "kafka: tests that require a reachable Kafka broker at localhost:9094",
]

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
